--- a/main.ipynb
+++ b/main.ipynb
@@ -2,8 +2,198 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c46eb8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3437dbe3",
+   "metadata": {},
+   "source": [
+    "## Análise e tratamento da planilha\n",
+    "A planilha utilizada foi a [Tabela Brasileira de Composição de Alimentos - 4a edição](https://www.nepa.unicamp.br/taco/tabela.php?ativo=tabela)\n",
+    "\n",
+    "Para o escopo do projeto, serão analisados somente os macronutrientes proteína, carboidratos e gorduras (lipídeos); e os micronutrientes vitaminas A e C, minerais cálcio e ferro.\n",
+    "\n",
+    "As demais colunas serão removidas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c6dce6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Número do alimento</th>\n",
+       "      <th>Descrição dos alimentos</th>\n",
+       "      <th>Energia (kcal)</th>\n",
+       "      <th>Energia (kJ)</th>\n",
+       "      <th>Proteína (g)</th>\n",
+       "      <th>Lipídeos (g)</th>\n",
+       "      <th>Carboidrato (g)</th>\n",
+       "      <th>Cálcio (mg)</th>\n",
+       "      <th>Ferro (mg)</th>\n",
+       "      <th>Vitamina A (mcg)</th>\n",
+       "      <th>Vitamica C (mg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cereais e derivados</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arroz, integral, cozido</td>\n",
+       "      <td>123.534893</td>\n",
+       "      <td>516.86999</td>\n",
+       "      <td>2.58825</td>\n",
+       "      <td>1.000333</td>\n",
+       "      <td>25.80975</td>\n",
+       "      <td>5.204</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Arroz, integral, cru</td>\n",
+       "      <td>359.678002</td>\n",
+       "      <td>1504.892761</td>\n",
+       "      <td>7.323286</td>\n",
+       "      <td>1.864833</td>\n",
+       "      <td>77.450714</td>\n",
+       "      <td>7.818</td>\n",
+       "      <td>0.948333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Arroz, tipo 1, cozido</td>\n",
+       "      <td>128.258486</td>\n",
+       "      <td>536.633504</td>\n",
+       "      <td>2.520817</td>\n",
+       "      <td>0.227</td>\n",
+       "      <td>28.05985</td>\n",
+       "      <td>3.544333</td>\n",
+       "      <td>0.076667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Arroz, tipo 1, cru</td>\n",
+       "      <td>357.789273</td>\n",
+       "      <td>1496.990319</td>\n",
+       "      <td>7.15854</td>\n",
+       "      <td>0.335</td>\n",
+       "      <td>78.759543</td>\n",
+       "      <td>4.414333</td>\n",
+       "      <td>0.677747</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Número do alimento  Descrição dos alimentos Energia (kcal) Energia (kJ)   \n",
+       "0  Cereais e derivados                      NaN            NaN          NaN  \\\n",
+       "1                    1  Arroz, integral, cozido     123.534893    516.86999   \n",
+       "2                    2     Arroz, integral, cru     359.678002  1504.892761   \n",
+       "3                    3    Arroz, tipo 1, cozido     128.258486   536.633504   \n",
+       "4                    4       Arroz, tipo 1, cru     357.789273  1496.990319   \n",
+       "\n",
+       "  Proteína (g) Lipídeos (g) Carboidrato (g) Cálcio (mg) Ferro (mg)   \n",
+       "0          NaN          NaN             NaN         NaN        NaN  \\\n",
+       "1      2.58825     1.000333        25.80975       5.204      0.262   \n",
+       "2     7.323286     1.864833       77.450714       7.818   0.948333   \n",
+       "3     2.520817        0.227        28.05985    3.544333   0.076667   \n",
+       "4      7.15854        0.335       78.759543    4.414333   0.677747   \n",
+       "\n",
+       "  Vitamina A (mcg) Vitamica C (mg)  \n",
+       "0              NaN             NaN  \n",
+       "1              NaN             NaN  \n",
+       "2              NaN             NaN  \n",
+       "3              NaN             NaN  \n",
+       "4              NaN             NaN  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('taco3.xls')\n",
+    "\n",
+    "# Elimina colunas não usadas\n",
+    "df = df.drop(['Unnamed: 2', 'Unnamed: 7'] \n",
+    "\t\t\t \t+ df.columns[9:11].tolist() \n",
+    "\t\t\t\t+ df.columns[12:16].tolist() \n",
+    "\t\t\t\t+ df.columns[17:21].tolist() \n",
+    "\t\t\t\t+ df.columns[22:28].tolist(), axis=1)\n",
+    "\n",
+    "# Renomeia colunas\n",
+    "df.columns = ['Número do alimento', 'Descrição dos alimentos', 'Energia (kcal)', \n",
+    "\t\t\t\t'Energia (kJ)', 'Proteína (g)', 'Lipídeos (g)', \n",
+    "\t\t\t\t'Carboidrato (g)', 'Cálcio (mg)', 'Ferro (mg)', \n",
+    "\t\t\t\t'Vitamina A (mcg)', 'Vitamica C (mg)']\n",
+    "\n",
+    "# Elimina linhas redundantes e reseta index\n",
+    "df = df.drop(index=[0, 1], axis=0)\n",
+    "df = df.reset_index(drop=True)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f7e445",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pucsp",
    "language": "python",
    "name": "python3"
   },
@@ -25,7 +215,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "71f30ea4b4e7cb6942b3443bdd1eabf3b6548ec42bdf7e719b7c897c49be90a9"
+   }
   }
  },
  "nbformat": 4,
