separacao de alimentos

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c46eb8db",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "c6dce6cf",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "[693 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     "\t\t\t\t\t+ df.columns[12:16].tolist() \n",
     "\t\t\t\t\t+ df.columns[17:21].tolist() \n",
     "\t\t\t\t\t+ df.columns[22:28].tolist(), axis=1)\n",
-    "\n",
+    "\t\t\t\t\t\n",
     "\t# Renomeia colunas\n",
     "\tdf.columns = ['Número do alimento', 'Descrição', 'Energia (kcal)', \n",
     "\t\t\t\t\t'Energia (kJ)', 'Proteína (g)', 'Gorduras (g)', \n",
@@ -297,7 +297,97 @@
     "\tdf = df.fillna(0)\n",
     "\treturn df\n",
     "\n",
-    "df = tratar_tabela(df)\n"
+    "df = tratar_tabela(df)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aff8e250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.loc[df['Número do alimento'] != 0]\n",
+    "\n",
+    "#Cereais e derivados\n",
+    "linhas_selecionadas = df1.loc[1:63]\n",
+    "df_cereais = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Verduras, hortaliças e derivados\n",
+    "linhas_selecionadas = df1.loc[72:179]\n",
+    "df_verduras = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Frutas e derivados\n",
+    "linhas_selecionadas = df1.loc[182:286]\n",
+    "df_frutas = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Gorduras e oleos\n",
+    "linhas_selecionadas = df1.loc[289:302]\n",
+    "df_gorduras = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Pescados e frutos do mar\n",
+    "linhas_selecionadas = df1.loc[306:361]\n",
+    "df_pescados = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Carnes e derivados\n",
+    "linhas_selecionadas = df1.loc[364:498]\n",
+    "df_carnes = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Leites e derivados\n",
+    "linhas_selecionadas = df1.loc[501:527]\n",
+    "df_leites = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Bebidas e derivados\n",
+    "linhas_selecionadas = df1.loc[530:543]\n",
+    "df_bebidas = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Ovos e derivados\n",
+    "linhas_selecionadas = df1.loc[546:553]\n",
+    "df_ovos = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Produtos acucarados\n",
+    "linhas_selecionadas = df1.loc[554:576]\n",
+    "df_acucarados = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Miscelaneas\n",
+    "linhas_selecionadas = df1.loc[579:588]\n",
+    "df_miscelaneas = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Alimentos industrializados\n",
+    "linhas_selecionadas = df1.loc[590:597]\n",
+    "df_industrializados = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Alimentos preparados\n",
+    "linhas_selecionadas = df1.loc[601:635]\n",
+    "df_preparados = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Leguminosas e derivados\n",
+    "linhas_selecionadas = df1.loc[638:670]\n",
+    "df_leguminosas = pd.DataFrame(linhas_selecionadas)\n",
+    "\n",
+    "#Nozes e sementes\n",
+    "linhas_selecionadas = df1.loc[673:684]\n",
+    "df_nozes = pd.DataFrame(linhas_selecionadas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8652b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#depois quero fazer de todas bonitinho (ignorar)\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "quantidade_alimentos = df_cereais.shape[0]\n",
+    "\n",
+    "df_carnes.plot.scatter(x='Proteína (g)', y='Número do alimento')\n",
+    "plt.xlabel ('Proteína (g)')\n",
+    "plt.ylabel ('Número do alimento')\n",
+    "plt.show ()"
    ]
   },
   {
@@ -314,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "38c8a993",
    "metadata": {},
    "outputs": [
@@ -515,7 +605,7 @@
        "10  1000.0   18.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "04ab1e32",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1262,34 @@
    "id": "5001ee59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ganha_massa (df, df_necessidades, sexo, peso):\n",
+    "    # Transforma as linhas dos nutrientes que são strings em 0 para evitar erros no pulp\n",
+    "\tcolunas_remover_str = df.drop('Descrição', axis=1).columns\n",
+    "\tdf[colunas_remover_str] = df[colunas_remover_str].applymap(lambda x: 0 if isinstance(x, str) else x)\n",
+    "\t\n",
+    "    \n",
+    "\t# Cria dicionários dos alimentos e seus respectivos nutrientes\n",
+    "\tcereais = df_cereais['Descrição'].tolist()\n",
+    "\tcprt = dict(zip(cereais, df_cereais['Proteína (g)']))\n",
+    "\n",
+    "\tverduras = df_verduras['Descrição'].tolist()\n",
+    "\tvprt = dict(zip(verduras, df_verduras['Proteína (g)']))\n",
+    "\n",
+    "\tfrutas = df_frutas['Descrição'].tolist()\n",
+    "\tfprt = dict(zip(frutas, df_frutas['Proteína (g)']))\n",
+    "\n",
+    "\tgorduras = df_gorduras['Descrição'].tolist()\n",
+    "\tgprt = dict(zip(gorduras, df_gorduras['Proteína (g)']))\n",
+    "\n",
+    "\tcarnes = df_carnes['Descrição'].tolist()\n",
+    "\tcaprt = dict(zip(carnes, df_carnes['Proteína (g)']))\n",
+    "\n",
+    "\t# Definiçã do problema\n",
+    "\tprob = pulp.LpProblem('Ganho de massa', pulp.LpMaximiize)\n",
+    "\n",
+    "\t# Variáveis de decisão"
+   ]
   }
  ],
  "metadata": {
@@ -1191,7 +1308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
